--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 
     <header>NEYFLIX</header>
-
-
+<section>
     <h1>MELHORES CLIPES DO NEY</h1>
 
     <H2>O CAOS PERFEITO</H2>
@@ -23,7 +22,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-
+</section>
 
 
 </body>
